--- a/ca_setup.yml
+++ b/ca_setup.yml
@@ -21,11 +21,11 @@
       get_url:
         dest: ~/get-pip.py
         url: https://bootstrap.pypa.io/get-pip.py
-      when: result == 0
+      when: result.rc == 1
 
     - name: install pip
       shell: python ~/get-pip.py
-      when: result == 0
+      when: result.rc == 1
 
     - name: ensure pyOpenSSL installed
       pip:
