--- a/inventory/inventory.ini
+++ b/inventory/inventory.ini
@@ -1,2 +1,5 @@
-[ca_hosts]
-localhost remote_user=centos
+[ca_host]
+cahost ansible_host=localhost remote_user=centos
+
+[target_hosts]
+target01 ansible_host=localhost remote_user=centos
